# kpac

./: .editorconfig  .gitignore  .pre-commit-config.yaml  BUILD  MODULE.bazel  README.md  container-structure-test.yaml
.github/workflows/: test.yml
bazel/: rego.bzl
bazel/maven/: maven.MODULE.bazel  maven_install.json
bazel/tools/: BUILD
scripts/: BUILD
src/main/kotlin/io/github/noysh22/kpac/: Main.kt
src/main/kotlin/io/github/noysh22/kpac/opa/: OpaApi.kt  OpaBundle.kt  OpaConstants.kt  OpaExports.kt  OpaModule.kt  OpaUtils.kt
src/main/kotlin/io/github/noysh22/kpac/wasm/: WasmLoader.kt
src/main/kotlin/io/proj/kpac/: Main.kt
src/main/kotlin/io/proj/kpac/opa/: OpaApi.kt  OpaBundle.kt  OpaConstants.kt  OpaExports.kt  OpaModule.kt  OpaUtils.kt
src/main/kotlin/io/proj/kpac/wasm/: WasmLoader.kt
src/rego/: BUILD  example.rego
src/test/kotlin/io/github/noysh22/kpac/: AnotherTest.kt  ExampleTest.kt  WasmTest.kt
src/test/kotlin/io/github/noysh22/kpac/opa/: OpaBundleTest.kt
src/test/kotlin/io/proj/kpac/: AnotherTest.kt  ExampleTest.kt  WasmTest.kt
src/test/kotlin/io/proj/kpac/opa/: OpaBundleTest.kt
src/test/wasm/: BUILD  README.md  math.wat
